--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -7,7 +7,7 @@
 * {
   font-family: "Overpass Mono", "Noto Color Emoji", monospace;
   font-size: 11px;
-  font-weight: bold;
+  font-weight: 600;
   min-height: 0;
   color: @foreground;
 }
@@ -73,4 +73,8 @@ window#waybar {
   margin: 2px 2px;
   border: 1px solid @accent;
   border-radius: 0;
+}
+
+#bluetooth:hover {
+	color: @accent;
 }
