--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -5,7 +5,7 @@
 @define-color muted #A89984;
 
 * {
-  font-family: "Overpass Mono", "Noto Color Emoji", monospace;
+  font-family: "Overpass", "Noto Color Emoji", monospace;
   font-size: 11px;
   font-weight: 600;
   min-height: 0;
@@ -40,13 +40,11 @@ window#waybar {
   margin: 2px 0px;
   padding: 1px;
   background: transparent;
-  color: @muted;
   border-radius: 2px;
 }
 
 #workspaces button.active {
   background: @surface;
-  color: @foreground;
 }
 
 #workspaces button.urgent {
@@ -62,19 +60,17 @@ window#waybar {
   margin: 2px 2px;
 }
 
-
+#bluetooth,
+#custom-weather,
 #clock {
   margin: 2px 2px;
   border: 1px solid @accent;
   border-radius: 0;
 }
 
-#bluetooth {
-  margin: 2px 2px;
-  border: 1px solid @accent;
-  border-radius: 0;
-}
-
+#custom-power:hover,
+#clock:hover,
+#custom-vpn:hover,
 #bluetooth:hover {
 	color: @accent;
 }
