--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -7,24 +7,43 @@
 * {
   font-family: "Overpass", "Noto Color Emoji", monospace;
   font-size: 11px;
-  font-weight: 600;
   min-height: 0;
   color: @foreground;
 }
 
-#left {
-  margin: 1px 0px 1px 2px;
+tooltip {
+  background: @background;
+  border: 1px solid @accent;
+  border-radius: 0;
+  padding: 2px;
+  margin: 0;
 }
 
-#center {
-  margin: 1px 0px 1px 0px;
+tooltip label {
+  padding: 0;
+  margin: 0;
+  color: @foreground;
+
+  /* Prevent giant blocks */
+  min-width: 0;
+  min-height: 0;
+}
+
+#right,
+#center,
+#left {
+  margin-top: 3px;
+	margin-bottom: 1px
+}
+
+#left {
+	margin-left: 5px;
 }
 
 #right {
-  margin: 3px 4px 3px 0px;
-
   border: 1px solid @accent;
   border-radius: 0;
+	margin-right: 5px;
 }
 
 window#waybar {
@@ -56,7 +75,7 @@ window#waybar {
 #network,
 #battery,
 #tray {
-  padding: 2px 10px;
+  padding: 0px 10px;
   margin: 2px 2px;
 }
 
@@ -68,6 +87,7 @@ window#waybar {
   border-radius: 0;
 }
 
+#network:hover,
 #custom-power:hover,
 #clock:hover,
 #custom-vpn:hover,
